# fc2d_hps

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile.am  README.md  fc2d_hps.cpp  fc2d_hps.h  fc2d_hps_diagnostics.h  fc2d_hps_fort.h  fc2d_hps_interface.cpp  fc2d_hps_interface.hpp  fc2d_hps_matrix.hpp  fc2d_hps_merge.cpp  fc2d_hps_merge.hpp  fc2d_hps_options.c  fc2d_hps_options.h  fc2d_hps_output_ascii.c  fc2d_hps_output_ascii.h  fc2d_hps_patch.hpp  fc2d_hps_physical_bc.h  fc2d_hps_quadtree.hpp  fc2d_hps_solve.c  fc2d_hps_solve.cpp  fc2d_hps_solve.h  fc2d_hps_vector.hpp
examples/: CMakeLists.txt  hps.apps  hps.cmake
examples/heat/: CMakeLists.txt  fclaw_options.ini  main.cpp
examples/hello/: CMakeLists.txt  fclaw_options.ini  main.cpp
examples/laplace/: CMakeLists.txt  Makefile.am  afterframe.m  fclaw_options.ini  laplace.cpp  laplace_user.cpp  laplace_user.h  setplot2.m
examples/laplace/fortran/: laplace_compute_error.f  laplace_eval_bc.f90  laplace_qexact.f90
examples/simple/: CMakeLists.txt  fclaw2d_clawpatch_user_exceeds_th.f90  fclaw_options.ini  laplace.cpp  laplace_diagnostics.c  laplace_diagnostics.h  laplace_options.c  laplace_options.h  laplace_user.cpp  laplace_user.h  main.cpp  simple_diagnostics.c  simple_diagnostics.h  simple_options.c  simple_options.h  simple_user.cpp  simple_user.h
examples/simple/fortran/: laplace_apply_bc.f90  laplace_compute_error.f  laplace_fort_rhs.f90  laplace_output.f90  laplace_qexact.f90  laplace_setprob.f90  simple_apply_bc.f90  simple_compute_error.f  simple_eval_bc.f90  simple_fort_rhs.f90  simple_output.f90  simple_qexact.f90
examples/simple/scripts/: hps_simple_analysis.py  run_timing.py
examples/svd/: CMakeLists.txt  main.cpp
fortran_source/: fc2d_hps_apply_bc.f90  fc2d_hps_apply_bc_default.f90  fc2d_hps_eval_bc.f90  fc2d_hps_eval_bc_default.f90  fc2d_hps_tag4coarsening.f90
include/HPS/: fc2d_hps.hpp
include/Methods/: fc2d_hps_build.hpp  fc2d_hps_copy.hpp  fc2d_hps_merge.hpp  fc2d_hps_methods.hpp  fc2d_hps_setup.hpp  fc2d_hps_solve.hpp  fc2d_hps_split.hpp  fc2d_hps_upwards.hpp
include/Structures/: fc2d_hps_datacache.hpp  fc2d_hps_matrix.hpp  fc2d_hps_patch.hpp  fc2d_hps_patchsolver.hpp  fc2d_hps_poissonproblem.hpp  fc2d_hps_quadtree.hpp  fc2d_hps_vector.hpp
include/Util/: GenericSingleton.hpp  fc2d_hps_diagnostics.h  fc2d_hps_fort.h  fc2d_hps_log.hpp  fc2d_hps_options.h  fc2d_hps_output_ascii.h  fc2d_hps_physical_bc.h
src/: CMakeLists.txt  fc2d_hps.cpp  fc2d_hps_diagnostics.c  fc2d_hps_diagnostics.h  fc2d_hps_interface.hpp  fc2d_hps_matrix.hpp  fc2d_hps_merge.cpp  fc2d_hps_merge.hpp  fc2d_hps_output_ascii.c  fc2d_hps_patch.cpp  fc2d_hps_patch.hpp  fc2d_hps_patchgrid.cpp  fc2d_hps_patchgrid.hpp  fc2d_hps_patchsolver.cpp  fc2d_hps_physical_bc.c  fc2d_hps_poissonproblem.cpp  fc2d_hps_poissonproblem.hpp  fc2d_hps_quadtree.hpp  fc2d_hps_solve.c  fc2d_hps_solve.cpp  fc2d_hps_solve.hpp  fc2d_hps_split.cpp  fc2d_hps_split.hpp  fc2d_hps_upwards.cpp  fc2d_hps_upwards.hpp  fc2d_hps_vector.hpp  test_bench.cpp
src/HPS/: fc2d_hps.cpp
src/Methods/: fc2d_hps_build.cpp  fc2d_hps_copy.cpp  fc2d_hps_merge.cpp  fc2d_hps_setup.cpp  fc2d_hps_solve.c  fc2d_hps_solve.cpp  fc2d_hps_split.cpp  fc2d_hps_upwards.cpp
src/Structures/: fc2d_hps_patch.cpp  fc2d_hps_patchgrid.cpp  fc2d_hps_patchsolver.cpp  fc2d_hps_poissonproblem.cpp
src/Util/: fc2d_hps_diagnostics.c  fc2d_hps_options.c  fc2d_hps_output_ascii.c  fc2d_hps_physical_bc.c
src/fortran_source/: fc2d_hps_tag4refinement.f90
tests/: CMakeLists.txt  fc2d_hps_unittest_hello.cpp  fc2d_hps_unittest_matrix.cpp  fc2d_hps_unittest_merge.cpp  fc2d_hps_unittest_patchgrid.cpp  fc2d_hps_unittest_patchsolver.cpp  fc2d_hps_unittest_quadtree.cpp  fc2d_hps_unittest_solve.cpp  fc2d_hps_unittest_vector.cpp  main.cpp
